auto-test/tests/chapter_18/invalid_types/invalid_incomplete_structs/initialize_incomplete.c
struct s;



extern struct s x = {1};

int main(void) { return 0; }

struct s {
  int a;
};